Signed-off-by: Salman ALAMDAR <salman.alamdar@gmail.com>

--- a/Developpement/design/register.css
+++ b/Developpement/design/register.css
@@ -23,7 +23,12 @@ body{
 }
 
 form{
-	background:#8FCAFF; /* Firefox */
+	background: #1f6e86;
+   background: -webkit-gradient(linear, left top, left bottom, from(#1a9dc5), to(#1f6e86));
+   background: -webkit-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -moz-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -ms-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -o-linear-gradient(top, #1a9dc5, #1f6e86);
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
 	-moz-box-shadow:0 0 15px black;
