--- a/Developpement/design/debate.css
+++ b/Developpement/design/debate.css
@@ -9,7 +9,7 @@
    box-shadow: rgba(0,0,0,1) 0 1px 0;
    text-shadow: 2px 2px 5px black;
     border-radius: 5px 5px 5px 5px;
-    box-shadow: 10px 10px 8px #417324;
+    box-shadow: 10px 10px 8px #1f6e86;
     color: white;
     font-family: "coolvetica_rg";
     font-size: 25px;
@@ -60,7 +60,7 @@ dl {
    box-shadow: rgba(0,0,0,1) 0 1px 0;
    text-shadow: 2px 2px 5px black;
     border-radius: 5px 5px 5px 5px;
-    box-shadow: 10px 10px 8px #417324;
+    box-shadow: 10px 10px 8px #1f6e86;
     color: white;
     display: inline-block;
     font-size: 30px;
