--- a/Developpement/design/validation.css
+++ b/Developpement/design/validation.css
@@ -34,7 +34,12 @@ a{
 	text-decoration:underline;
 }
 form{
-	background:#8FCAFF;
+	background: #1f6e86;
+   background: -webkit-gradient(linear, left top, left bottom, from(#1a9dc5), to(#1f6e86));
+   background: -webkit-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -moz-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -ms-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -o-linear-gradient(top, #1a9dc5, #1f6e86);
 	margin:40px auto 0;
 	padding:73px;
 	width:653px;
