--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -567,18 +567,26 @@ select:active, select:focus {
   margin-top:-5px;
 }
 .comment_post {
-  -webkit-box-shadow:#000000 0 1px 0;
-  background-image:-webkit-linear-gradient(top, #BFE9F6, #94BECB);
-  border:1px solid #003E40;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#d9d9d9));
+   background: -webkit-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -moz-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -ms-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -o-linear-gradient(top, #f7f7f7, #d9d9d9);
+ 
   border-bottom-left-radius:6px;
   border-bottom-right-radius:6px;
   border-top-left-radius:6px;
   border-top-right-radius:6px;
-  box-shadow:#000000 0 1px 0;
-  font-size:25px;
+  box-shadow:#003E40 2px 2px 2px;
+  border: 1px solid #333333;
+  font-size: 12px;
   height:100%;
   position:relative;
   width:64%;
+}
+.comment_post :hover
+{
+	background-color: #f5f5f5;
 }
 .delete {
   color:red;
@@ -973,66 +981,53 @@ select:active, select:focus {
   margin-right:auto;
 }
 .accordionbutton {
-  -webkit-box-shadow:#000000 0 1px 0;
-  background-image:-webkit-linear-gradient(top, #1A9DC5, #1F6E86);
-  background-position:initial initial;
-  background-repeat:initial initial;
+background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e0e0e0));
+   background: -webkit-linear-gradient(top, #f9f9f9, #e0e0e0);
+   background: -moz-linear-gradient(top, #f9f9f9, #e0e0e0);
+   background: -ms-linear-gradient(top, #f9f9f9, #e0e0e0);
+   background: -o-linear-gradient(top, #f9f9f9, #e0e0e0);
   border:1px solid #003E40;
   border-bottom-left-radius:6px;
   border-bottom-right-radius:6px;
   border-top-left-radius:6px;
   border-top-right-radius:6px;
   box-shadow:#000000 0 1px 0;
-  color:white;
+  color: #333333;
   cursor:pointer;
   float:left;
-  font-family:coolvetica_rg;
-  font-size:20px;
-  text-shadow:black 2px 2px 5px;
-  width:800px;
+  font-size: 14px;
+  width:500px;
+  font-weight: bold;
+}
+.accordionbutton :hover
+{
+	color: #333333;
 }
 .accordioncontent {
-  background-color:#95B1CE;
   background-position:initial initial;
   background-repeat:initial initial;
   float:left;
-  width:800px;
-}
-#wrapper_notif {
-  margin-left:auto;
-  margin-right:auto;
-  width:800px;
-}
-.accordionbutton_notif {
-  -webkit-box-shadow:#000000 0 1px 0;
-  background-image:-webkit-linear-gradient(top, #1A9DC5, #1F6E86);
-  background-position:initial initial;
-  background-repeat:initial initial;
-  border:1px solid #003E40;
+  width: 600px;
+    -webkit-box-shadow:#000000 0 1px 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#d9d9d9));
+   background: -webkit-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -moz-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -ms-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -o-linear-gradient(top, #f7f7f7, #d9d9d9);
+ 
   border-bottom-left-radius:6px;
   border-bottom-right-radius:6px;
   border-top-left-radius:6px;
   border-top-right-radius:6px;
-  box-shadow:#000000 0 1px 0;
-  color:white;
-  cursor:pointer;
-  float:left;
-  font-family:coolvetica_rg;
-  font-size:20px;
-  text-shadow:black 2px 2px 5px;
-  width:800px;
+  box-shadow:#003E40 2px 2px 2px;
 }
-.accordioncontent_notif {
-  background-color:#95B1CE;
-  background-position:initial initial;
-  background-repeat:initial initial;
-  float:left;
-  width:800px;
-}
+
+
+
 .accordioncontent {
-  background-color:#95B1CE;
+  display: block;
   float:left;
-  width:800px;
+  width:600px;
 }
 .over {
   background-color:#41BFE6;
