--- a/Developpement/design/home.css
+++ b/Developpement/design/home.css
@@ -1,10 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
 
-@font-face {
-    font-family: "coolvetica_rg";
-    src: url("fonts/coolvetica_rg.ttf") format("truetype");
-}
 
 *{
 	border:none;
@@ -54,17 +50,21 @@ body{
 		
 			#titlebar h1{
 				font-family:  arial,sans-serif;
-				color: white;
+				
 				width: 400px;
 				font-size:70px;
 				margin: auto;
-		   border: 1px solid #003e40;
-	   background: #62a708;
-	   background: -webkit-gradient(linear, left top, left bottom, from(#58b54c), to(#62a708));
-	   background: -webkit-linear-gradient(top, #58b54c, #62a708);
-	   background: -moz-linear-gradient(top, #58b54c, #62a708);
-	   background: -ms-linear-gradient(top, #58b54c, #62a708);
-	   background: -o-linear-gradient(top, #58b54c, #62a708);
+		   background: -webkit-gradient(linear, left top, left bottom, from(#00a0d1), to#008eb9));
+   background: -webkit-linear-gradient(top, #00a0d1, #008eb9);
+   background: -moz-linear-gradient(top, #00a0d1, #008eb9);
+   background: -ms-linear-gradient(top, #00a0d1, #008eb9);
+   background: -o-linear-gradient(top, #00a0d1, #008eb9);
+  box-shadow: 1px 1px 3px #111111;
+  border-bottom-left-radius:6px;
+  border-bottom-right-radius:6px;
+  border-top-left-radius:6px;
+  border-top-right-radius:6px;
+  color: #F5F5F5;
 	   padding: 2px 4px;
 	   -webkit-border-radius: 6px;
 	   -moz-border-radius: 6px;
@@ -161,34 +161,28 @@ body{
 	
 	
 	.entrer a {
-   border: 1px solid #003e40;
-   background: #62a708;
-   background: -webkit-gradient(linear, left top, left bottom, from(#58b54c), to(#62a708));
-   background: -webkit-linear-gradient(top, #58b54c, #62a708);
-   background: -moz-linear-gradient(top, #58b54c, #62a708);
-   background: -ms-linear-gradient(top, #58b54c, #62a708);
-   background: -o-linear-gradient(top, #58b54c, #62a708);
-   padding: 2px 4px;
-   -webkit-border-radius: 6px;
-   -moz-border-radius: 6px;
-   border-radius: 6px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: white;
-   font-size: 36px;
-   font-family: 'coolvetica_rg';
-   text-decoration: none;
+   background: -webkit-gradient(linear, left top, left bottom, from(#00a0d1), to#008eb9));
+   background: -webkit-linear-gradient(top, #00a0d1, #008eb9);
+   background: -moz-linear-gradient(top, #00a0d1, #008eb9);
+   background: -ms-linear-gradient(top, #00a0d1, #008eb9);
+   background: -o-linear-gradient(top, #00a0d1, #008eb9);
+  box-shadow: 1px 1px 3px #111111;
+  border-bottom-left-radius:6px;
+  border-bottom-right-radius:6px;
+  border-top-left-radius:6px;
+  border-top-right-radius:6px;
+  color: #F5F5F5;
+  font-size: 32px;
+  padding:4px 8px;
+  text-decoration:none;
+  vertical-align:middle;
+   font-family: Arial;
+   font-weight: bold;
    vertical-align: middle;
    box-shadow: 2px 2px 2px #003e40;
    }
 .entrer a:hover {
    border-top-color: #00ad23;
-   background: #00ad23;
-   color: #f5ff63;
-   }
-.entrer a:active {
-   border-top-color: #1b435e;
-   background: #58b54c;
+ 
+   color: white;
    }
